Add featureEnvy suggestion

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Smell Finder</title>
+  <title>Smell Detector</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -30,8 +30,7 @@
 
 <div class="jumbotron">
   <div class="container text-center">
-    <h1>Smell Finder</h1>      
-    <p><i>Tool niye kichu kotha</i></p>
+    <h1>Smell Detector</h1>      
   </div>
 </div>
 
@@ -45,7 +44,7 @@
 			<span class="input-group-btn">
         		<button class="btn btn-default btn-choose" type="button">Choose</button>
     		</span>
-    		<input type="text" class="form-control" placeholder='Choose a zip file...' />
+    		<input type="text" class="form-control" placeholder='Choose a zip file...' required/>
     		<span class="input-group-btn">
        			 <button class="btn btn-warning btn-reset" type="button">Reset</button>
     		</span>
@@ -68,7 +67,7 @@
 <form method="GET" action="git_clone">
 	
 	
-	<input class="textClass" type="text" name="link" placeholder='Enter github link...'><br><br>
+	<input class="textClass" type="text" name="link" placeholder='Enter github link...' required><br><br>
 	<div class="form-group">
 		<button type="submit" class="btn btn-lg btn-primary" value="submit">submit</button>
 	</div>
@@ -80,7 +79,7 @@
 
 
 <footer class="footer">
-  <p>Developed by Nafis</p>
+  <p>Developed by Md. Nafis Nafis</p>
 </footer>
 
 </body>
