--- a/WebContent/option.html
+++ b/WebContent/option.html
@@ -23,7 +23,7 @@
       .row.content {height: auto;} 
     }
 	.footer {
-	padding: 25px;
+	padding: 5px;
     position: fixed;
     left: 0;
     bottom: 0;
@@ -154,15 +154,10 @@
 	    </tr>
 	  </thead>
 	  <tbody>
-	    <tr>
-	      <th scope="row">1</th>
-	      <td>Brain Method</td>
-	      <td><button type="submit" formaction="suggest_brain_method" class="btn"><i class="fa fa-download"></i> Download</button></td>
-	    </tr>
 		<tr>
-	      <th scope="row">2</th>
+	      <th scope="row">1</th>
 	      <td>Feature Envy</td>
-	      <td><button type="submit" formaction="suggest_feature_envy" class="btn"><i class="fa fa-download"></i> Download</button></td>
+	      <td><button type="submit" formaction="suggest_feature" class="btn"><i class="fa fa-download"></i> Download</button></td>
 	    </tr>
 	  </tbody>
 	</table>
@@ -173,7 +168,7 @@
   </div>
 </div>
 <footer class="footer">
-  <p>Developed by Nafis</p>
+  <p>Developed by Md. Nafis Faisal</p>
 </footer>
 </body>
 <script>
